--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ body {
 }
 
 .footer {
+    margin-top: 10px;
     border-top: 1px solid lightgrey;
     text-align: center;
     padding: 15px;
@@ -57,6 +58,7 @@ body {
 }
 
 .article-container {
+    margin-top: 10px;
     border: 1px solid lightgrey;
     padding: 15px;
 }
@@ -64,4 +66,19 @@ body {
 .articleDiv {
     border-top: 1px solid lightgrey;
     padding: 10px;
+}
+
+a {
+    color: black;
+    font-size: 25px;
+}
+
+a:hover {
+    text-decoration: none;
+    color:rgb(33, 33, 168)
+}
+
+#InputSearchTerm:focus, #FormControlSelect:focus, #InputStartYear:focus, #InputEndYear:focus {
+    box-shadow: none;
+    border: 1px solid grey;
 }
