--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,11 +50,13 @@ body {
 }
 
 .footer {
-    margin-top: 10px;
+    margin-top: 20px;
     border-top: 1px solid lightgrey;
     text-align: center;
     padding: 15px;
     padding-top: 20px;
+    height: 5vh;
+    font-size: 10pt;
 }
 
 .article-container {
@@ -81,4 +83,17 @@ a:hover {
 #InputSearchTerm:focus, #FormControlSelect:focus, #InputStartYear:focus, #InputEndYear:focus {
     box-shadow: none;
     border: 1px solid grey;
+}
+
+.article-number {
+    font-size: 12px;
+}
+
+.url {
+    font-size: 15px;
+    color: rgb(31, 31, 134);
+}
+
+p {
+    margin: 0px;
 }
